@@ -11,7 +11,7 @@
  <property name="factory">addTopicColumns</property>
  <property name="immediate_view">folder_contents</property>
  <property name="global_allow">False</property>
- <property name="filter_content_types">False</property>
+ <property name="filter_content_types">True</property>
  <property name="allowed_content_types">
   <element value="TopicColumn"/>
  </property>
